Fixed high chroma on 4-col feature and main nav not showing on click

--- a/app/sass/framework/components/_bc-4-col-feature.sass
+++ b/app/sass/framework/components/_bc-4-col-feature.sass
@@ -3,8 +3,7 @@
 		@include gradOverlay('grey-fill')
 		.bc-card
 			&__heading
-				font-size: $h4
-				font-weight: 500
+				font-size: $h3
 				@include doFeatureHeading
 		.bc-feature-component__intro
 			margin-bottom: 0
