--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -233,7 +233,10 @@ img
 		@media screen and (min-width: $x-large)
 			.bc-feature-component__content
 				grid-template: auto / repeat(4, 1fr)
-	
+	&.bc-2-col-media-feature
+		@media screen and (min-width: 880px)
+			.bc-2-col-media-feature__text
+					margin-top: -$vertical-unit * 2.2
 	&.has-high-chroma
 		@include makeWhiteText
 		.bc-card:nth-child(1)
@@ -718,6 +721,15 @@ $waves-height: 50px
 	&.bc-2-col-media-feature, &.bc-cta-feature
 		padding-top: 		calc(#{$vertical-unit} * 3.5 + (#{$waves-height} / 2))
 		padding-bottom: calc(#{$vertical-unit} * 3.5 + (#{$waves-height} / 2))
+	&.has-high-chroma
+		@include makeHighChroma
+		@include makeWhiteText
+		&--orange
+			@include makeHighChroma($start-colour: rgba($orange, 1), $end-colour: $dark-red)
+			//background-image: radial-gradient(ellipse at 100% 0%, $orange, $dark-red 80%) 
+			@include makeWhiteText
+			.bc-elipses__elipse
+				fill: url(#linear-gradient--orange)
 .has-waves 
 	z-index: 10 
 	.wave-wrap
